# floyd-hoare

./: LICENSE  README.md  henzinger60.cabal  hie.yaml  stack.yaml
src/: Examples.hs  FloydHoare.lhs  Induction.hs  Programs.lhs  Refinements.lhs  State.hs  Verifier.lhs
src/Proof/: FH.hs  VC.hs
